--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,6 @@ margin-left: 174px;
 }
 
 .header-btn:hover {
-color: rgb(241, 227, 42);
-background-color: #000;
+color: #a93b59;
+background-color: #3e3939;
 }
