--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ background-color: #3e3939;
     display: flex;
     gap: 124px;
     text-align: center;
-    justify-content: center;
+    padding-left: 288px;
 }
 
 .head-item {
@@ -152,4 +152,26 @@ font-size: 16px;
 text-align: center;
 color: #fff;
 margin-top: 2px;
+}
+
+/* katalog-section */
+
+.katalog-section {
+    width: 1440px;
+    height: 1076px;
+position: relative;
+}
+
+.img-section2 {
+    position: absolute;
+    right: 0px;
+}
+
+.katalog-text {
+    font-family: "Playfair Display", sans-serif;
+font-weight: 600;
+font-size: 36px;
+color: #a93b59;
+padding-left: 349px;
+padding-top: 44px;
 }
