--- a/css/style.css
+++ b/css/style.css
@@ -255,3 +255,53 @@ position: relative;
     width: 1px;
     border: 1px solid #444; 
 }
+
+.flover {
+    margin-top: 310px;
+    position: relative;
+}
+
+.flower-title {
+    font-family: "Playfair Display", sans-serif;
+    font-weight: 600;
+    font-size: 36px;
+    color: #fff;
+    padding-left: 630px;
+
+}
+
+.flower-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 75px;
+    justify-content: center;
+}
+
+.flower-item {
+width: 320px;
+height: 413px;
+border-radius: 15px;
+background-color: #fff;
+text-align: center;
+padding: 15px 15px;
+position: relative;
+}
+
+.flower-text {
+    font-family: "Source Sans Pro", sans-serif;
+font-weight: 400;
+font-size: 32px;
+color: #000;
+}
+
+.flower-span {
+    font-family: "Source Sans Pro", sans-serif;
+font-weight: 300;
+font-size: 16px;
+color: #444;
+}
+
+.heart {
+    position: absolute;
+    right: 15px;
+}
