--- a/css/style.css
+++ b/css/style.css
@@ -333,9 +333,32 @@ border: 2px solid white;
 position: absolute;
 left: 135px;
 top: 230px;
-
-
-
-
-
+cursor: pointer;
 }
+.flover-link2-div {
+    display: flex;
+    gap: 7px;
+}
+
+.flover-link2 {
+    border: 2px solid #fff;
+    border-radius: 22px;
+    width: 144px;
+    height: 31px;
+    background: #a93b59;
+    border: 2px solid white;
+    position: absolute;
+    left: 107px;
+    top: 230px;
+   padding-top: 15px;
+    }
+
+    .flover-link-p {
+        font-family: "Source Sans Pro", sans-serif;
+        font-weight: 600;
+        font-size: 15px;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        color: #fff;
+        padding-left: 10px;
+    }
