--- a/css/style.css
+++ b/css/style.css
@@ -454,3 +454,19 @@ color: #949090;
 .tet {
     margin-top: 140px;
 }
+
+.control-text.tet-text {
+    margin-left: -120px;
+}
+
+.divcon {
+    margin-left: 23px;
+}
+
+.pep {
+    margin-left: -130px;
+    margin-right: 130px;
+}
+
+
+
