--- a/css/style.css
+++ b/css/style.css
@@ -535,9 +535,16 @@ padding-left: 38px;
 }
 
 .form-btn {
-    padding: 10px;
-    width: 100%;
-    box-sizing: border-box;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: #fff;
+    border-radius: 15px;
+width: 460px;
+height: 62px;
+box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1), 6px 0 12px 0 rgba(0, 0, 0, 0.1), 23px 0 23px 0 rgba(0, 0, 0, 0.09), 51px 0 31px 0 rgba(0, 0, 0, 0.05), 91px 0 36px 0 rgba(0, 0, 0, 0.01), 142px 0 40px 0 rgba(0, 0, 0, 0);
+background: #a93b59;
+cursor: pointer;
 }
 .form-title {
     font-family: "Source Sans Pro", sans-serif;
