--- a/css/style.css
+++ b/css/style.css
@@ -566,5 +566,26 @@ color: #fff;
     font-size: 20px;
     color: #8d8d8d;
     font-style: italic; 
-    /* text-indent: 30px;  */
 }
+
+.response-tel {
+    margin-left: 248px;
+    margin-top: 15px;
+}
+
+.tel-title {
+    font-family: "Source Sans Pro", sans-serif;
+font-weight: 400;
+font-size: 32px;
+text-align: center;
+color: #fff;
+}
+
+/* font-family: "Source Sans Pro", sans-serif;
+font-weight: 700;
+font-size: 20px;
+color: rgba(255, 255, 255, 0.71);
+
+
+font-weight: 400;
+color: #fff; */
