--- a/css/style.css
+++ b/css/style.css
@@ -599,3 +599,23 @@ color: #fff;
 color: #fff;
 font-weight: 700;
 }
+
+.res-main {
+    font-family: "Playfair Display", sans-serif;
+font-weight: 600;
+font-size: 36px;
+color: #a93b59;
+
+position: absolute;
+right: 256px;
+top: 930px;
+}
+
+.res-line {
+    border: 2px solid #b02e51;
+width: 488px;
+height: 0px;
+position: absolute;
+right: 0px;
+top: 1000px;
+}
