--- a/css/style.css
+++ b/css/style.css
@@ -678,6 +678,34 @@ padding-right: 120px;
     margin-top: 32px;
  }
 
+ .footer-div3 {
+    text-align: center;
+ }
+
+ .phone-link {
+    font-family: "Source Sans Pro", sans-serif;
+font-weight: 400;
+font-size: 24px;
+text-transform: capitalize;
+color: #fff;
+ }
+
+ .footer-link-text {
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #fff;
+ }
+
+ .footer-kiev {
+    font-family: "Source Sans Pro", sans-serif;
+font-weight: 400;
+font-size: 24px;
+text-transform: capitalize;
+text-align: center;
+color: #fff;
+ }
+
 
 
 /* js */
