--- a/css/style.css
+++ b/css/style.css
@@ -706,8 +706,47 @@ text-align: center;
 color: #fff;
  }
 
+/* hidden-div */
 
+.hidden-div {
+ width: 1440px;
+height: 564px;
+border-radius: 10px;
+background: rgba(185, 106, 127, 0.7);
+text-align: center;
+position: relative;
+}
 
+.close-link {
+position: absolute;
+right: 44px;
+top: 44px;
+}
+
+.hidden-title {
+    font-family: "Playfair Display", sans-serif;
+font-style: italic;
+font-weight: 500;
+font-size: 48px;
+line-height: 1.25;
+color: #a93b59;
+padding-top: 163px;
+margin-bottom: 40px;
+}
+
+.hidden-text {
+    font-family: "Source Sans Pro", sans-serif;
+font-weight: 600;
+font-size: 32px;
+color: #fff;
+margin-bottom: 16px;
+}
+
+.hidden-line {
+    border: 2px solid #b02e51;
+width: 1340px;
+height: 0px;
+}
 /* js */
 
 .modal-content {
