--- a/css/style.css
+++ b/css/style.css
@@ -709,6 +709,7 @@ color: #fff;
 /* hidden-div */
 
 .hidden-div {
+    /* display: none; */
  width: 1440px;
 height: 564px;
 border-radius: 10px;
@@ -746,6 +747,10 @@ margin-bottom: 16px;
     border: 2px solid #b02e51;
 width: 1340px;
 height: 0px;
+}
+
+.show-modal {
+    display: block;
 }
 /* js */
 
