--- a/css/style.css
+++ b/css/style.css
@@ -708,16 +708,38 @@ color: #fff;
 
 /* hidden-div */
 
-.hidden-div {
- width: 1440px;
-height: 564px;
-border-radius: 10px;
-background: rgba(185, 106, 127, 0.7);
-text-align: center;
-position: relative;
-display: none;
+.backdrop {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 
-}
+  .hidden-div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1440px;
+    height: 564px;
+    border-radius: 10px;
+    background: rgba(185, 106, 127, 0.7);
+    text-align: center;
+    position: relative;
+    display: block;
+  }
+
+  .show-modal {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
 
 .close-link {
 position: absolute;
@@ -750,9 +772,7 @@ width: 1340px;
 height: 0px;
 }
 
-show-modal {
-    display: block;
-}
+
 /* js */
 
 .modal-content {
