--- a/css/style.css
+++ b/css/style.css
@@ -715,7 +715,7 @@ color: #fff;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(46, 47, 66, 0.4);
+    background-color: rgba(23, 23, 25, 0.4);
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -728,7 +728,7 @@ color: #fff;
     transform: translate(-50%, -50%);
     width: 1440px;
     height: 564px;
-    border-radius: 10px;
+    border-radius: 30px;
     background: rgba(185, 106, 127, 0.7);
     text-align: center;
     position: relative;
@@ -756,7 +756,8 @@ font-style: italic;
 font-weight: 500;
 font-size: 48px;
 line-height: 1.25;
-color: #a93b59;
+/* color: #a93b59; */
+color: red;
 padding-top: 163px;
 margin-bottom: 40px;
 }
@@ -770,7 +771,7 @@ margin-bottom: 16px;
 }
 
 .hidden-line {
-    border: 2px solid #b02e51;
+    border: 2px solid red;
 width: 1340px;
 height: 0px;
 }
