--- a/css/style.css
+++ b/css/style.css
@@ -794,3 +794,13 @@ height: 0px;
     border-radius: 20px;
 }
 
+.modal {
+    display: flex;
+    
+    gap: 30px;
+    padding: 30px;
+}
+.modal img {
+    width: 100%;
+    height: auto;
+}
