--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ font-weight: 300;
 font-size: 18px;
 color: #fff;
 position: relative;
-margin-left: 50px;
+padding-left: 30px;
 
 }
 
@@ -794,7 +794,25 @@ height: 0px;
     border-radius: 10px;
 }
 
+.chech {
+margin-right: 24px;
+border: 1px solid #fff;
+border-radius: 4px;
+width: 18px;
+height: 18px;
+}
 
+.order-item {
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.order-close {
+    margin-left: 75px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
 
 /* js */
 
