--- a/css/style.css
+++ b/css/style.css
@@ -788,7 +788,7 @@ height: 0px;
     position: relative;
     z-index: 1000;
     width: 200px;
-    height: 200px;
+    height: auto;
     padding: 16px 20px;
     background-color: rgba(185, 106, 127, 0.5);
     border-radius: 10px;
@@ -808,7 +808,7 @@ height: 18px;
 }
 
 .order-close {
-    margin-left: 79px;
+    margin-left: 55px;
     background-color: transparent;
     border: none;
     cursor: pointer;
