--- a/css/style.css
+++ b/css/style.css
@@ -784,7 +784,7 @@ height: 0px;
 }
 
 .order {
-    position: relative;
+    position: absolute;
     z-index: 1000;
     width: 190px;
     height: auto;
@@ -793,6 +793,7 @@ height: 0px;
     border-radius: 10px;
     margin-left: -55px;
     display: none;
+    margin-top: 23px;
 }
 
 .chech {
