--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ color: #fff;
     /* left: 150px; */
     background-color: transparent;
     border: none;
+    outline: none;
     cursor: pointer;
 }
 /* 
@@ -855,3 +856,26 @@ cursor: pointer;
     height: auto;
     border-radius: 10px;
 }
+
+
+
+.modal11 {
+    display: none; /* Скрыто по умолчанию */
+    position: fixed;
+    z-index: 1000;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.9); /* Полупрозрачный черный фон */
+    overflow: auto;
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    max-width: 80%;
+    max-height: 80%;
+}
+
