--- a/css/style.css
+++ b/css/style.css
@@ -797,7 +797,7 @@ height: 0px;
     margin-top: 23px;
 }
 
-.chech {
+.check {
     margin-right: 24px;
     border: 1px solid #fff;
     border-radius: 50%; /* Изменение радиуса для создания круглой формы */
@@ -814,7 +814,7 @@ height: 0px;
     background-color: #000; 
 } */
 
-.chech:checked::after {
+.check:checked::after {
     content: '';
     position: absolute;
     top: 4px;
