--- a/css/style.css
+++ b/css/style.css
@@ -636,6 +636,17 @@ top: 1000px;
     height: 600px;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
 .swiper {
     width: 1300px;
     height: 400px;
