--- a/css/style.css
+++ b/css/style.css
@@ -927,7 +927,7 @@ cursor: pointer;
 /* ========== */
 
 
-/* @media screen and (min-width: 450px) {
+@media screen and (min-width: 450px) {
     .header {
 
 
@@ -940,5 +940,5 @@ cursor: pointer;
 
 
     }
-} */
+}
 
