--- a/css/style.css
+++ b/css/style.css
@@ -674,9 +674,10 @@ top: 1000px;
 }
 
 .swiper {
-    width: 1300px;
+    width: 100%;
     height: 400px;
     margin-top: 60px;
+    position: relative;
   }
 
  .swiper-button-prev::after,
@@ -684,10 +685,33 @@ top: 1000px;
     color: #B02E51;
  }
 
+   .swiper-button-prev,
+        .swiper-button-next {
+            width: 44px;
+            height: 44px;
+
+            color: #fff;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 10; /* Повыше других элементов */
+        }
+
+        .swiper-button-prev {
+            left: 10px; /* Выход за пределы контейнера */
+        }
+
+        .swiper-button-next {
+            right: 10px; /* Выход за пределы контейнера */
+        }
+ 
+
+
  .swiper-pagination-bullet {
-background-color: #fff;
-width: 20px;
-height: 20px;
+background-color: rgb(241, 227, 42);
+width: 15px;
+height: 15px;
  }
 
  .client-line {
