--- a/css/style.css
+++ b/css/style.css
@@ -958,18 +958,17 @@ cursor: pointer;
 /* ========== */
 
 
-@media screen and (min-width: 450px) {
-    .header {
+@media screen and (max-width: 1200px) {
+ 
 
-
-    }
+    
 }
 
 @media screen and (min-width: 768px) {
-    .header {
+    
 
 
 
-    }
+    
 }
 
